[gd_scene load_steps=6 format=3 uid="uid://4cyajmpvya0t"]

[ext_resource type="Theme" uid="uid://5lacq73qg3pw" path="res://assets/styles/theme.tres" id="1_yaf6g"]
[ext_resource type="Script" uid="uid://ccava50u55qgg" path="res://scripts/dialogue_box.gd" id="2_l304u"]
[ext_resource type="Script" uid="uid://g32um0mltv5d" path="res://addons/dialogue_manager/dialogue_label.gd" id="2_qkucv"]
[ext_resource type="Texture2D" uid="uid://dj11klyrvhnxo" path="res://assets/interfaz/Texto-2.png" id="3_hvmm2"]

[sub_resource type="LabelSettings" id="LabelSettings_cs1qt"]
font_color = Color(1, 0.512959, 0, 1)

[node name="DialogueBox" type="MarginContainer"]
offset_right = 711.0
offset_bottom = 280.0
size_flags_horizontal = 3
mouse_filter = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("2_l304u")

[node name="Dialogue" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme = ExtResource("1_yaf6g")

[node name="Background" type="TextureRect" parent="Dialogue"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_hvmm2")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Dialogue/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Dialogue/Background/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterName" type="Label" parent="Dialogue/Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DialogueLabel" type="RichTextLabel" parent="Dialogue/Background/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
bbcode_enabled = true
text = "Dialogue"
fit_content = true
script = ExtResource("2_qkucv")
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex")

[node name="ActionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_cs1qt")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="finished_typing" from="Dialogue/Background/MarginContainer/VBoxContainer/DialogueLabel" to="Dialogue" method="_on_dialogue_label_finished_typing"]
